# practica_git

finished_calculadora/: pyproject.toml
finished_calculadora/calculadora/: __main__.py
finished_calculadora/calculadora/operaciones/: aditivas.py
finished_calculadora/calculadora/operaciones/multiplicativas/: multiplicativas.py
finished_calculadora/calculadora/utils/: fracciones.py
